<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/filmLibelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/filmsLibelle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/keywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filmLibelle" />

    <TextView
        android:id="@+id/dateLibelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateLibelle"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="151dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/spinnerDate"
        app:layout_constraintTop_toBottomOf="@+id/keywords"
        app:layout_constraintBottom_toTopOf="@+id/genreLibelle" />

    <Spinner
        android:id="@+id/spinnerDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="146dp"
        app:layout_constraintStart_toEndOf="@+id/dateLibelle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keywords"
        app:layout_constraintBottom_toTopOf="@+id/spinnerGenre" />

    <TextView
        android:id="@+id/genreLibelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genreLibelle"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="560dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/spinnerGenre"
        app:layout_constraintTop_toBottomOf="@+id/dateLibelle"
        app:layout_constraintBottom_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreLibelle"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="646dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/seekBarNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreLibelle" />

    <Spinner
        android:id="@+id/spinnerGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="254dp"
        tools:layout_editor_absoluteY="559dp"
        app:layout_constraintStart_toEndOf="@+id/genreLibelle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDate"
        app:layout_constraintBottom_toTopOf="@+id/seekBarNombre" />

    <SeekBar
        android:id="@+id/seekBarNombre"
        android:layout_width="189dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGenre" />

    <Button
        android:id="@+id/envoyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/envoyerBouton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarNombre" />

</android.support.constraint.ConstraintLayout>